[package]
name = "bitprim"
version = "0.1.0"
authors = ["nubis <nb@bitex.la>"]
build = "build.rs"

[dependencies]
libc = "0.2.0"
error-chain = "0.11.0"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
regex = "0.2"

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
default = ["bch"]
btc = []
bch = []
